<?xml version="1.0"?>
<package format="2">
  <name>ur5_robot</name>
  <version>1.1.0</version>
  <description>
    RRT and A* algorithms for UR5 robot
  </description>
  <license>Apache 2.0</license>
  <author email="kamil_karol@gmail.com">Kamil Karol</author>
  <maintainer email="kamil_karol@gmail.com">Kamil Karol</maintainer>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>python-numpy</build_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
